# KLog

./: CMakeLists.txt  README
example/: CMakeLists.txt  example.cpp
include/: Export.h  KLog.h  KTime.h
src/: KLog.cpp  KTime.cpp
