
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT( KLog )

#添加DEBUG标志
SET(CMAKE_DEBUG_POSTFIX "d" CACHE STRING "add a postfix, usually d on windows" )

#设置输出路径
#SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/bin)	//全局的
#SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/lib)
#SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/lib)

SET(OUTPUT_BINDIR ${PROJECT_BINARY_DIR}/bin)
SET(OUTPUT_LIBDIR ${PROJECT_BINARY_DIR}/lib)

FOREACH(CONF ${CMAKE_CONFIGURATION_TYPES})        # For each configuration (Debug, Release, MinSizeRel... and/or anything the user chooses)
	STRING(TOUPPER "${CONF}" CONF)                # Go uppercase (DEBUG, RELEASE...)
	SET("CMAKE_ARCHIVE_OUTPUT_DIRECTORY_${CONF}" "${OUTPUT_LIBDIR}")
	SET("CMAKE_RUNTIME_OUTPUT_DIRECTORY_${CONF}" "${OUTPUT_BINDIR}")
	IF(MSVC)
		SET("CMAKE_LIBRARY_OUTPUT_DIRECTORY_${CONF}" "${OUTPUT_BINDIR}")
	ELSE(MSVC)
		SET("CMAKE_LIBRARY_OUTPUT_DIRECTORY_${CONF}" "${OUTPUT_LIBDIR}")
	ENDIF(MSVC)
ENDFOREACH()

#头文件包含路径
SET(KLog_DIR ${PROJECT_SOURCE_DIR})
INCLUDE_DIRECTORIES(${KLog_DIR}/include)

#设置源码变量
SET(KLog_TARGET_H
	include/Export.h
	include/KTime.h
	include/KLog.h
	)
	
SET(KLog_TARGET_SRC
	src/KTime.cpp
	src/KLog.cpp
	)

#添加宏定义
ADD_DEFINITIONS(-DKLOG_LIBRARY)
	
#添加共享库工程
ADD_LIBRARY( KLog SHARED
	${KLog_TARGET_H}
	${KLog_TARGET_SRC}
	)
	
#ensures the /Debug /Release are remmoved
#IF(MSVC)
#FOREACH(CONF ${CMAKE_CONFIGURATION_TYPES})
#	STRING(TOUPPER "${CONF}" CONF)
#	
#	FILE(TO_CMAKE_PATH "${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_${CONF}}" TMPVAR)
#	SET_TARGET_PROPERTIES(KLog PROPERTIES "ARCHIVE_OUTPUT_DIRECTORY_${CONF}" "${TMPVAR}")
#	FILE(TO_CMAKE_PATH "${CMAKE_RUNTIME_OUTPUT_DIRECTORY_${CONF}}" TMPVAR)
#   SET_TARGET_PROPERTIES(KLog PROPERTIES "RUNTIME_OUTPUT_DIRECTORY_${CONF}" "${TMPVAR}")
#    FILE(TO_CMAKE_PATH "${CMAKE_LIBRARY_OUTPUT_DIRECTORY_${CONF}}" TMPVAR)
#    SET_TARGET_PROPERTIES(KLog PROPERTIES "LIBRARY_OUTPUT_DIRECTORY_${CONF}" "${TMPVAR}")
#ENDFOREACH(CONF ${CMAKE_CONFIGURATION_TYPES})
#ELSE(MSVC)
	SET_TARGET_PROPERTIES(KLog PROPERTIES "ARCHIVE_OUTPUT_DIRECTORY" "${OUTPUT_LIBDIR}")
    SET_TARGET_PROPERTIES(KLog PROPERTIES "RUNTIME_OUTPUT_DIRECTORY" "${OUTPUT_BINDIR}")
    SET_TARGET_PROPERTIES(KLog PROPERTIES "LIBRARY_OUTPUT_DIRECTORY" "${OUTPUT_LIBDIR}")
#ENDIF(MSVC)


#SET_TARGET_PROPERTIES( KLog PROPERTIES RUNTIME_OUTPUT_DIRECTORY_DEBUG ${PROJECT_BINARY_DIR}/bin)
#SET_TARGET_PROPERTIES( KLog PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/lib)
#SET_TARGET_PROPERTIES( KLog PROPERTIES ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/lib)

#添加例子程序
OPTION(BUILD_EXAMPLE "build example" ON)

IF(BUILD_EXAMPLE)
	ADD_SUBDIRECTORY(example)
ENDIF(BUILD_EXAMPLE)
