
SET(TARGET_SRC example.cpp)
ADD_EXECUTABLE(example ${TARGET_SRC})

IF(MSVC)
	TARGET_LINK_LIBRARIES(example 
				      debug ${OUTPUT_LIBDIR}/KLog${CMAKE_DEBUG_POSTFIX}.lib optimized ${OUTPUT_LIBDIR}/KLog.lib)
ELSE(MSVC)
	TARGET_LINK_LIBRARIES(example
                                      debug KLog optimized KLog )
ENDIF(MSVC)

#设置输出路径
SET_TARGET_PROPERTIES(example PROPERTIES "ARCHIVE_OUTPUT_DIRECTORY" "${OUTPUT_LIBDIR}")
SET_TARGET_PROPERTIES(example PROPERTIES "RUNTIME_OUTPUT_DIRECTORY" "${OUTPUT_BINDIR}")
SET_TARGET_PROPERTIES(example PROPERTIES "LIBRARY_OUTPUT_DIRECTORY" "${OUTPUT_LIBDIR}")
	
ADD_DEPENDENCIES(example KLog)
